# simple_sagemaker

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build.yaml
docs/: high_level_flow.txt
docs/source/: conf.py  index.rst  modules.rst  simple_sagemaker.rst  simple_sagemaker.task_toolkit.rst
examples/cli_multi/: run.sh  worker.py
examples/cli_simple/: run.sh  worker.py
examples/debugging/: metrics.py  run.sh
examples/debugging/tensorboard/: lightning.py
examples/dogs_vs_cats/: .gitignore  run_remote.sh
examples/imagenet/: run_remote.sh
examples/imagenet/code/: download.sh
examples/medium/distributed/: README.md  cifar10.py  run_local.sh  run_remote.sh
examples/medium/intro/: README.md  run1.sh  run2.sh  run3.sh  ssm_ex2.py
examples/multiple_tasks/: example.py
examples/multiple_tasks/code/: algo_multi.py
examples/processing_cli/: ex1.py  ex3.sh  run.sh
examples/processing_cli/code/: ex1_dep.py
examples/readme_examples/: run.sh  run_rest.sh  run_smoke.bat  run_smoke.sh  worker.py  worker1.py  worker2.py  worker3.py  worker4.py
examples/retcode/: run.sh
examples/single_file/: example.py
examples/single_task/: example.py
examples/update_expected/: update.sh
src/: cli_launcher.py
src/simple_sagemaker/: __init__.py  cli.py  cmd_launcher.py  constants.py  ecr_sync.py  iam_utils.py  s3_sync.py  shell_launcher.py  sm_project.py  sm_task.py
tests/: conftest.py  test_examples.py
tests/smoke/: test.py  test_basics.py
tests/system/: compare_outputs.py  test_examples.py
(+127 files in other folders)
