[metadata]
name = simple_sagemaker
version = attr: simple_sagemaker.VERSION
description = A **simpler** and **cheaper** way to distribute work (python/shell/training) work on machines of your choice in the (AWS) cloud
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shiftan/simple_sagemaker
author = Ariel Shiftan
maintainer = Ariel Shiftan
license = Apache 2.0
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = sagemaker, aws
maintainer-email = shiftan@gmail.com
project_urls =
    Source=https://github.com/shiftan/simple_sagemaker
    Tracker=https://github.com/shiftan/simple_sagemaker

[options]
package_dir=
    =src
packages=find:
install_requires =
    docker
    boto3
    sagemaker
python_requires = >=3.6

[options.packages.find]
where=src

[options.extras_require]
docs =
    sphinx>=2.0.0
testing =
    pytest>=4.0.0

[options.entry_points]
console_scripts =
    ssm = simple_sagemaker.cli:main